sumo/tests/netconvert/errors/errors/broken_edge/edge#id__duplicate4/errors.netconvert
Error: Duplicate edge occured. ID='4'
Quitting (on error).
